--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "markdown>=3.8",
     "numpy>=2.2.6",
     "openai>=1.83.0",
+    "python-dotenv>=1.1.0",
     "python-multipart>=0.0.20",
     "requests>=2.32.3",
     "tqdm>=4.67.1",
