--- a/project-tds-virtual-ta-promptfoo.yaml
+++ b/project-tds-virtual-ta-promptfoo.yaml
@@ -3,7 +3,7 @@ description: "TDS Virtual TA Project Sample (but not the actual evaluation) Ques
 providers:
   - id: https
     config:
-      url: https://2c37-49-204-113-213.ngrok-free.app/api/ # Replace this with your API endpoint
+      url: https://119d-49-204-113-213.ngrok-free.app/api/ # Replace this with your API endpoint
       method: POST
       headers:
         Content-Type: application/json
